# awesome-demo

./: README.md
AndroidJni/app/: CMakeLists.txt  build.gradle
AndroidJni/app/src/androidTest/java/com/hanschen/androidjni/: ExampleInstrumentedTest.java
AndroidJni/app/src/main/: AndroidManifest.xml
AndroidJni/app/src/main/cpp/: nativeinterface.c
AndroidJni/app/src/main/java/com/hanschen/androidjni/: MainActivity.java
AndroidJni/app/src/main/java/com/hanschen/androidjni/bean/: UserInfo.java
AndroidJni/app/src/main/java/com/hanschen/androidjni/jni/: BaseClass.java  Child.java  Father.java  NativeApi.java  NativeInterface.java  TestInterface.java
AndroidJni/app/src/main/res/layout/: activity_main.xml
AndroidJni/app/src/main/res/values/: strings.xml
AndroidJni/app/src/test/java/com/hanschen/androidjni/: ExampleUnitTest.java
Patterns/: .gitignore  build.gradle
Patterns/docs/: DesignPatterns.mdj
ProGuardDemo/: .gitignore  build.gradle  settings.gradle
ProGuardDemo/proguard/: myconfig.pro
ResSync/ResSyncClient/: build.gradle
ResSync/ResSyncClient/app/: build.gradle
ResSync/ResSyncClient/app/src/main/: AndroidManifest.xml
ResSync/ResSyncServer/: build.gradle  settings.gradle
ResSync/protobuf/: ressync.proto
ResSync/protobuf/ut/android/ressync/protobuf/: ProtoBean.java
openGL/hello-openGL/hello-openGL.xcodeproj/: project.pbxproj
openGL/hello-openGL/hello-openGL.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
openGL/hello-opengl/hello-opengl/: glad.c
openGL/hello-opengl/hello-opengl.xcodeproj/: project.pbxproj
(+120 files in other folders)
